@@ -1,4 +1,6 @@
 master
+- Mayhem
+  Fix unXXXifier on pages starting with not XXXed numbers.
 
 2.26.2
 - Mayhem
